[package]
name = "patchlan"
version = "0.1.0-dev"
authors = ["azdle <azdle@azdle.net>"]
edition = "2021"
description = "A Peer-to-Peer Overlay Mesh Network for Wireguard"
homepage = "https://patchlan.org"
repository = "https://github.com/azdle/patchlan"
license = "AGPL-3.0-or-later"
categories = ["network-programming"]

[dependencies]
anyhow = "1.0.98"
clap = { version = "4", features = ["derive", "cargo", "wrap_help"] }
futures = "0.3"
futures-timer = "3"
libp2p = { version = "0.55", features = ["dns", "dcutr", "identify", "macros", "noise", "ping", "quic", "relay", "rendezvous", "tcp", "tokio", "yamux"] }
tokio = { version = "1", features = ["full"]}
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
